--- a/package.json
+++ b/package.json
@@ -1,10 +1,4 @@
 {
-  "scripts": {
-    "start": "webpack-dev-server --hot --content-base ./public",
-    "dev": "webpack-dev-server --hot --content-base ./public",
-    "build": "webpack --mode=production",
-    "watch": "webpack --mode=development --watch --progress --colors --display-modules"
-  },
   "dependencies": {
     "axios": "^0.19.2",
     "dayjs": "^1.8.31",
@@ -12,12 +6,9 @@
     "dexie-relationships": "^1.2.11",
     "flatpickr": "3.1.5",
     "imba": "^2.0.0-alpha.74",
-    "imba-rollup": "^2.0.0-alpha.57",
-    "uuid": "^8.3.0",
-    "webpack": "^4.41.5",
-    "webpack-dev-server": "^3.8.0"
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.7"
+    "imba-snowpack": "^0.0.5"
   }
 }
