--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,19 @@
 {
  "name": "Avi",
+ "short_name": "Avi",
  "icons": [
-  {
-   "src": "\/img\/icon\/android-chrome-192x192.png",
-   "sizes": "192x192",
-   "type": "image\/png",
-   "density": "4.0"
-  },
-  {
-   "src": "\/img\/icon\/android-chrome-512x512.png",
-   "sizes": "512x512",
-   "type": "image\/png",
-   "density": "4.0"
-  }
+    {
+        "src": "/img/icon/android-chrome-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png",
+        "purpose": "maskable any"
+    },
+    {
+        "src": "/img/icon/android-chrome-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png",
+        "purpose": "maskable any"
+    }
  ],
   "start_url": "index.html",
   "display": "standalone",
