--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "dev":"npx snowpack dev",
-    "build":"npx snowpack build"
+    "dev": "npx snowpack dev",
+    "build": "npx snowpack build"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -10,6 +10,7 @@
     "dexie-relationships": "^1.2.11",
     "flatpickr": "3.1.5",
     "imba": "^2.0.0-alpha.74",
+    "js-convert-case": "^4.0.1",
     "uuid": "^8.3.0"
   },
   "devDependencies": {
